<resources>
    <string name="app_name">CIBL Android Test</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="payment_method">Select Payment Method</string>
    <string name="bkash">Bkash</string>
    <string name="nagad">Nagad</string>
    <string name="narration">Narration</string>
    <string name="amount">Amount</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="submit">Submit</string>
    <string name="fill_up_the_form">Fill up the form!</string>
    <string name="date">Date</string>
    <string name="amount_convert">%0.2f</string>
</resources>