<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/very_large_space"
    tools:context=".PaymentFragment">

    <ImageView
        android:id="@+id/gatewayIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_bkash"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/label_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fill_up_the_form"
        app:layout_constraintTop_toBottomOf="@+id/gatewayIcon"/>


    <EditText
        android:id="@+id/numberEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:autofillHints="017XXXXXXXX"
        android:background="@drawable/stroke_round"
        android:drawablePadding="16dp"
        android:hint="@string/number"
        android:inputType="phone"
        android:maxHeight="35dp"
        android:maxLength="11"
        android:padding="8dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/label_text"/>

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:autofillHints="017XXXXXXXX"
        android:background="@drawable/stroke_round"
        android:drawablePadding="16dp"
        android:hint="@string/name"
        android:inputType="text"
        android:maxHeight="35dp"
        android:maxLength="11"
        android:padding="8dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/numberEt"/>

    <EditText
        android:id="@+id/amountEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:autofillHints="017XXXXXXXX"
        android:background="@drawable/stroke_round"
        android:drawablePadding="16dp"
        android:hint="@string/amount"
        android:inputType="number"
        android:maxHeight="35dp"
        android:maxLength="11"
        android:padding="8dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/nameEt"/>

    <EditText
        android:id="@+id/narrationEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:autofillHints="017XXXXXXXX"
        android:background="@drawable/stroke_round"
        android:drawablePadding="16dp"
        android:hint="@string/narration"
        android:inputType="text"
        android:maxHeight="35dp"
        android:maxLength="11"
        android:padding="8dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/amountEt"/>


    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_space"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/narrationEt" />

</androidx.constraintlayout.widget.ConstraintLayout>