<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="payment"
            type="com.example.ciblandroidtest.PaymentModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/very_large_space">

        <ImageView
            android:id="@+id/gatewayIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:src="@drawable/ic_bkash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/date"
            android:layout_margin="@dimen/medium_space"
            app:layout_constraintTop_toBottomOf="@+id/gatewayIcon"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textStyle="bold"
            android:layout_margin="@dimen/medium_space"
            app:layout_constraintTop_toBottomOf="@+id/date_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_space"
            tools:text="@string/number"
            android:text="@{payment.number}"
            app:layout_constraintBaseline_toBaselineOf="@+id/number_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:layout_margin="@dimen/medium_space"
            app:layout_constraintTop_toBottomOf="@+id/number_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_space"
            tools:text="@string/name"
            android:text="@{payment.name}"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textStyle="bold"
            android:layout_margin="@dimen/medium_space"
            app:layout_constraintTop_toBottomOf="@+id/name_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_space"
            tools:text="@string/amount"
            android:text="@{payment.amount}"
            app:layout_constraintBaseline_toBaselineOf="@+id/amount_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/narration_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/narration"
            android:textStyle="bold"
            android:layout_margin="@dimen/medium_space"
            app:layout_constraintTop_toBottomOf="@+id/amount_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/narration_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_space"
            tools:text="@string/narration"
            android:text="@{payment.narration}"
            app:layout_constraintBaseline_toBaselineOf="@+id/narration_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textStyle="bold"
            android:layout_margin="@dimen/medium_space"
            app:layout_constraintTop_toBottomOf="@+id/narration_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_space"
            tools:text="@string/location"
            app:layout_constraintBaseline_toBaselineOf="@+id/location_label"
            app:layout_constraintEnd_toEndOf="parent" />
        <Button
            android:id="@+id/downloadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/very_large_space"
            android:text="Download PDF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>